# boardgamepy

./: .env.example  .gitignore  CLAUDE.md  LOGGING_GUIDE.md  QUICKSTART.md  README.md  VIEW_LOGS_COMMANDS.txt  mkdocs.yml  pyproject.toml  view_logs.py  webappdeployguide.md
docs/: getting-started.md  index.md
examples/: README.md
examples/codenames/: README.md  __init__.py  actions.py  board.py  codenames.txt  config.py  data.py  game.py  human_agent.py  main.py  main_human.py  prompts.py  run.sh  state.py  ui.py
examples/coup/: README.md  __init__.py  actions.py  board.py  characters.py  config.py  game.py  human_agent.py  main.py  main_human.py  prompts.py  state.py  ui.py
examples/dixiquote/: README.md  __init__.py  actions.py  config.py  data.py  dixiquote_rulebook.md  dixiquote_situation_deck_revised_80_cards.md  game.py  human_agent.py  main.py  main_human.py  prompts.py  state.py  ui.py
examples/incangold/: __init__.py  actions.py  board.py  cards.py  config.py  game.py  human_agent.py  main.py  main_human.py  prompts.py  state.py  ui.py
examples/loveletter/: README.md  __init__.py  actions.py  board.py  cards.py  config.py  game.py  human_agent.py  main.py  main_human.py  prompts.py  state.py  ui.py
examples/nim/: README.md  __init__.py  actions.py  board.py  config.py  game.py  main.py  prompts.py  state.py  ui.py
examples/rps/: README.md  actions.py  config.py  game.py  human_agent.py  main.py  main_human.py  prompts.py  prompts_strategy.py  strategy_game.py  ui.py
scripts/: deploy_gcp.sh
webapp/: .gitignore  __init__.py
(+121 files in other folders)
