[project]
name = "boardgamepy"
version = "0.1.0"
description = "BoardGamePy - A framework for building AI-playable board games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "langchain-openai>=1.1.6",
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "pymongo>=4.6",
]
authors = [
    {name = "Fathiyul Fahmi", email = "fathiyul@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
ai = [
    "langchain-core>=0.1",
    "langchain-openai>=0.1",
]
examples = [
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
